<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="applicationLabel">Dialer</string>
    <string name="launcherDialer">Phone</string>
    <string name="dialerIconLabel">Phone</string>
    <string name="recentCallsIconLabel">Call log</string>
    <string name="menu_sendTextMessage">Send text message</string>
    <string name="recentCalls_callNumber">Call
        <xliff:g id="name">%s</xliff:g>
    </string>
    <string name="recentCalls_editNumberBeforeCall">Edit number before call</string>
    <string name="recentCalls_addToContact">Add to contacts</string>
    <string name="recentCalls_removeFromRecentList">Remove from call log</string>
    <string name="recentCalls_deleteAll">Clear call logs</string>
    <string name="recentCalls_trashVoicemail">Delete voicemail</string>
    <string name="recentCalls_shareVoicemail">Share voicemail</string>
    <string name="recentCalls_empty">Call log is empty.</string>
    <string name="clearCallLogConfirmation_title">Clear call logs ?</string>
    <string name="clearCallLogConfirmation">Your selected call records will be deleted.</string>
    <string name="clearCallLogProgress_title">Clearing call log\u2026</string>
    <plurals name="notification_voicemail_title">
        <item quantity="one">Voicemail</item>
        <item quantity="other">
            <xliff:g id="count">%1$d</xliff:g>
            Voicemails
        </item>
    </plurals>
    <string name="notification_action_voicemail_play">Play</string>
    <string name="notification_voicemail_callers_list"><xliff:g id="newer_callers">%1$s</xliff:g>,
        <xliff:g id="older_caller">%2$s</xliff:g>
    </string>
    <string name="notification_new_voicemail_ticker">New voicemail from
        <xliff:g id="caller">%1$s</xliff:g>
    </string>
    <string name="voicemail_playback_error">Couldn\'t play voicemail.</string>
    <string name="voicemail_buffering">Buffering\u2026</string>
    <string name="voicemail_fetching_content">Fetching voicemail\u2026</string>
    <string name="voicemail_fetching_timout">Couldn\'t fetch voicemail.</string>
    <string name="call_log_voicemail_header">Calls with voicemail only</string>
    <string name="call_log_incoming_header">Incoming calls only</string>
    <string name="call_log_outgoing_header">Outgoing calls only</string>
    <string name="call_log_missed_header">Missed calls only</string>
    <string name="voicemail_status_voicemail_not_available">Can\'t connect to voicemail server.
    </string>
    <string name="voicemail_status_messages_waiting">Can\'t connect to voicemail server. New
        voicemails are waiting.
    </string>
    <string name="voicemail_status_configure_voicemail">Set up your voicemail.</string>
    <string name="voicemail_status_audio_not_available">Audio not available.</string>
    <string name="voicemail_status_action_configure">Set up</string>
    <string name="voicemail_status_action_call_server">Call voicemail</string>
    <string name="voicemail_speed_slowest">Slowest speed</string>
    <string name="voicemail_speed_slower">Slow speed</string>
    <string name="voicemail_speed_normal">Normal speed</string>
    <string name="voicemail_speed_faster">Fast speed</string>
    <string name="voicemail_speed_fastest">Fastest speed</string>
    <string name="call_log_item_count_and_date">(<xliff:g id="count">%1$d</xliff:g>)
        <xliff:g id="date">%2$s</xliff:g>
    </string>
    <string name="sms_disambig_title">Choose number</string>
    <string name="call_disambig_title">Choose number</string>
    <string name="make_primary">Remember this choice</string>
    <string name="description_image_button_one">one</string>
    <string name="description_image_button_two">two</string>
    <string name="description_image_button_three">three</string>
    <string name="description_image_button_four">four</string>
    <string name="description_image_button_five">five</string>
    <string name="description_image_button_six">six</string>
    <string name="description_image_button_seven">seven</string>
    <string name="description_image_button_eight">eight</string>
    <string name="description_image_button_nine">nine</string>
    <string name="description_image_button_star">star</string>
    <string name="description_image_button_zero">zero</string>
    <string name="description_image_button_pound">pound</string>
    <string name="description_voicemail_button">voicemail</string>
    <string name="description_search_button">search</string>
    <string name="description_dial_button">dial</string>
    <string name="description_delete_button">backspace</string>
    <string name="description_digits_edittext">number to dial</string>
    <string name="action_menu_call_history_description">Call History</string>
    <string name="action_menu_overflow_description" msgid="2295659037509008453">More options</string>
    <string name="action_menu_dialpad_button">dial pad</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_show_outgoing_only">Show outgoing only</string>
    <string name="menu_show_incoming_only">Show incoming only</string>
    <string name="menu_show_missed_only">Show missed only</string>
    <string name="menu_show_voicemails_only">Show voicemails only</string>
    <string name="menu_show_all_calls">Show all calls</string>
    <string name="add_2sec_pause">Add 2-sec pause</string>
    <string name="add_wait">Add wait</string>
    <string name="call_settings">Call settings</string>
    <string name="menu_newContact">New contact</string>
    <string name="menu_allContacts">All contacts</string>
    <string name="callDetailTitle">Call details</string>
    <string name="toast_call_detail_error">Couldn\'t read details for the requested call.</string>
    <string name="dialer_useDtmfDialpad">Use touch tone keypad</string>
    <string name="dialer_returnToInCallScreen">Return to call in progress</string>
    <string name="dialer_addAnotherCall">Add call</string>
    <string name="type_incoming">Incoming call</string>
    <string name="type_outgoing">Outgoing call</string>
    <string name="type_missed">Missed call</string>
    <string name="type_voicemail">Voicemail</string>
    <string name="actionIncomingCall">Incoming calls</string>
    <string name="description_call_log_play_button">Play voicemail</string>
    <string name="description_call_log_incoming_call">Incoming call</string>
    <string name="description_call_log_outgoing_call">Outgoing call</string>
    <string name="description_call_log_missed_call">Missed call</string>
    <string name="description_call_log_voicemail">Voicemail</string>
    <string name="description_add_contact">Add contact</string>
    <string name="description_view_contact">View contact <xliff:g id="name">%1$s</xliff:g></string>
    <string name="description_call">Call <xliff:g id="name">%1$s</xliff:g></string>
    <string name="description_send_text_message">Send text message to <xliff:g id="name">%1$s</xliff:g></string>
    <string name="description_call_log_unheard_voicemail">Unheard voicemail</string>
    <string name="description_start_voice_search">Start voice search</string>
    <string name="call_log_empty_gecode">\u0020</string>
    <string name="menu_callNumber">Call <xliff:g id="number">%s</xliff:g></string>
    <string name="unknown">Unknown</string>
    <string name="voicemail">Voicemail</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="dialerKeyboardHintText">Use keyboard to dial</string>
    <string name="dialerDialpadHintText">Dial to add a call</string>
    <string name="callDetailsDurationFormat"><xliff:g id="minutes" example="42">%s</xliff:g> mins <xliff:g id="seconds" example="28">%s</xliff:g> secs</string>
    <string name="dialog_phone_call_prohibited_message" msgid="4313552620858880999">Call not sent</string>
    <string name="dialog_voicemail_not_ready_message">Voicemail number is unavailable:to set up voicemail, go to Menu Call Settings.</string>
    <string name="dialog_voicemail_airplane_mode_message">To call voicemail, first turn off Airplane mode.</string>
    <string name="contact_list_loading">Loading\u2026</string>
    <string name="imei">IMEI</string>
    <string name="meid">MEID</string>
    <string name="simContacts_emptyLoading">Loading from SIM card\u2026</string>
    <string name="simContacts_title">SIM card contacts</string>
    <string name="add_contact_not_available">Re-enable the People application to use this feature.</string>
    <string name="dialer_hint_find_contact">Type a name or phone number</string>
    <string name="call_log_all_title">All</string>
    <string name="call_log_missed_title">Missed</string>
    <string name="call_log_activity_title_font_family">sans-serif-light</string>
    <string name="show_all_contacts_title_font_family">sans-serif-light</string>
    <string name="recentMissed_empty">No recent missed calls.</string>
    <string name="recentVoicemails_empty">No recent voicemails.</string>
    <string name="show_all_contacts">Show all contacts</string>
    <string name="show_favorites_only">Show favorites only</string>
    <string name="call_log_activity_title">History</string>
    <string name="dialpad_0_number">0</string>
    <string name="dialpad_1_number">1</string>
    <string name="dialpad_2_number">2</string>
    <string name="dialpad_3_number">3</string>
    <string name="dialpad_4_number">4</string>
    <string name="dialpad_5_number">5</string>
    <string name="dialpad_6_number">6</string>
    <string name="dialpad_7_number">7</string>
    <string name="dialpad_8_number">8</string>
    <string name="dialpad_9_number">9</string>
    <string name="dialpad_star_number">*</string>
    <string name="dialpad_pound_number">#</string>
    <string name="dialpad_0_letters">+</string>
    <string name="dialpad_1_letters"></string>
    <string name="dialpad_2_letters">ABC</string>
    <string name="dialpad_3_letters">DEF</string>
    <string name="dialpad_4_letters">GHI</string>
    <string name="dialpad_5_letters">JKL</string>
    <string name="dialpad_6_letters">MNO</string>
    <string name="dialpad_7_letters">PQRS</string>
    <string name="dialpad_8_letters">TUV</string>
    <string name="dialpad_9_letters">WXYZ</string>
    <string name="dialpad_star_letters">P</string>
    <string name="dialpad_pound_letters">W</string>
    <string name="show_all_contacts_title">All contacts</string>
    <string name="show_all_contacts_button_text">All contacts</string>
    <string name="favorite_hidden">Removed from favorites</string>
    <string name="favorite_hidden_undo">Undo</string>
    <string name="search_shortcut_call_number">Call
        <xliff:g id="number">%s</xliff:g>
    </string>
    <string name="search_shortcut_add_to_contacts">Add to contacts</string>
    <string name="num_missed_calls"><xliff:g id="number">%s</xliff:g> new missed calls</string>
    <string name="no_favorites">Favorites &amp; contacts you\ncall often will show here.\nSo, start calling.</string>
    <string name="contact_tooltip">Tap image to see all numbers or press and hold to reorder</string>
    <string name="description_dismiss">Dismiss</string>
     <string name="dialog_phone_call_prohibited_title">Call not sent</string>
    <string name="show_publiccontacts">Contacts</string>
    <string name="must_removefrvriteitem">"delete_favrite_item"</string>
    <string name="delete_favrite_done">delete_item_done</string>
    <string name="working_favrite_delete">deleting_favrite</string>
    <string name="show_privatecontacts">show private contacts </string>
    <string name="list_empty">contacts is empty</string>
    <string name="location_1">location_1</string>
    <string name="location_2">location_2</string>
    <string name="location_3">location_3</string>
    <string name="location_4">location_4</string>
    <string name="private_call_settings">private_call_settings</string>
</resources>