<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2006 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- Dialpad in the Phone app. -->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialpad"
    android:layout_width="270dip"
    android:layout_height="0px"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="@dimen/dialpad_vertical_margin"
    android:layout_weight="@integer/dialpad_layout_weight_dialpad"
    android:background="@color/background_dialpad"
    android:paddingBottom="10dip"
    android:paddingLeft="5dip"
    android:paddingRight="5dip" >

    <TableRow
        android:layout_height="0px"
        android:layout_weight="0.5" >

        <ImageButton
            android:id="@+id/one"
            style="@style/DialtactsDialpadButtonStyle"
            android:contentDescription="@string/description_image_button_one"
            android:background="@drawable/dial_num_1" />

        <ImageButton
            android:id="@+id/two"
            style="@style/DialtactsDialpadButtonStyle"
            android:contentDescription="@string/description_image_button_two"
            android:background="@drawable/dial_num_2" />

        <ImageButton
            android:id="@+id/three"
            style="@style/DialtactsDialpadButtonStyle"
            android:contentDescription="@string/description_image_button_three"
            android:background="@drawable/dial_num_3" />
    </TableRow>

    <TableRow
        android:layout_height="0px"
        android:layout_weight="0.5" >

        <ImageButton
            android:id="@+id/four"
            style="@style/DialtactsDialpadButtonStyle"
            android:contentDescription="@string/description_image_button_four"
            android:background="@drawable/dial_num_4" />

        <ImageButton
            android:id="@+id/five"
            style="@style/DialtactsDialpadButtonStyle"
            android:contentDescription="@string/description_image_button_five"
            android:background="@drawable/dial_num_5" />

        <ImageButton
            android:id="@+id/six"
            style="@style/DialtactsDialpadButtonStyle"
            android:contentDescription="@string/description_image_button_six"
            android:background="@drawable/dial_num_6" />
    </TableRow>

    <TableRow
        android:layout_height="0px"
        android:layout_weight="0.5" >

        <ImageButton
            android:id="@+id/seven"
            style="@style/DialtactsDialpadButtonStyle"
            android:contentDescription="@string/description_image_button_seven"
            android:background="@drawable/dial_num_7" />

        <ImageButton
            android:id="@+id/eight"
            style="@style/DialtactsDialpadButtonStyle"
            android:contentDescription="@string/description_image_button_eight"
            android:background="@drawable/dial_num_8" />

        <ImageButton
            android:id="@+id/nine"
            style="@style/DialtactsDialpadButtonStyle"
            android:contentDescription="@string/description_image_button_nine"
            android:background="@drawable/dial_num_9" />
    </TableRow>

    <TableRow
        android:layout_height="0px"
        android:layout_weight="0.5" >

        <ImageButton
            android:id="@+id/star"
            style="@style/DialtactsDialpadButtonStyle"
            android:contentDescription="@string/description_image_button_star"
            android:background="@drawable/dial_num_star" />

        <ImageButton
            android:id="@+id/zero"
            style="@style/DialtactsDialpadButtonStyle"
            android:contentDescription="@string/description_image_button_zero"
            android:background="@drawable/dial_num_0" />

        <ImageButton
            android:id="@+id/pound"
            style="@style/DialtactsDialpadButtonStyle"
            android:contentDescription="@string/description_image_button_pound"
            android:background="@drawable/dial_num_pound" />
    </TableRow>

</TableLayout>