<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2006 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- Dialpad in the Phone app. -->
<!--
         Text field and possibly soft menu button above the keypad where
         the digits are displayed.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialpad_container"
    android:layout_width="match_parent"
    android:layout_height="304dip"
    android:layout_centerHorizontal="true"
    android:orientation="vertical" >

<!--     <View
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="200dip"
        android:background="@null"
        android:clickable="false"
        android:focusable="false" /> -->

    <SlidingDrawer
        android:id="@+id/dialer_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:content="@+id/dialpad"
        android:handle="@+id/handle"
        android:paddingLeft="15dip"
        android:paddingRight="15dip" >

        <View
            android:id="@id/handle"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@null"
            android:clickable="false"
            android:focusable="false" />

        <LinearLayout
            android:id="@id/dialpad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#e4e7ea"
            android:paddingLeft="20dip"
            android:layout_marginTop="5dip"
       		 android:paddingRight="20dip"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                 android:clickable="false"
                 android:layout_marginTop="5dip"
                 android:layout_marginRight="10dip"
                 android:layout_marginLeft="10dip"
        		android:focusable="false"
                android:layout_gravity="center_horizontal"

                android:layout_weight="@integer/dialpad_layout_weight_dialpad">

                <TableRow
                    android:layout_height="0px"
                    android:layout_weight="3" >

                    <ImageButton
                        android:id="@+id/one"
                        style="@style/DialtactsDialpadButtonStyle"
                        android:contentDescription="@string/description_image_button_one"
                        android:background="@drawable/dial_num_1" />

                   <View
                        android:layout_width="20dip"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
/> 
                    
                    <ImageButton
                        android:id="@+id/two"
                        style="@style/DialtactsDialpadButtonStyle"
                         android:paddingRight="5dip"
                        android:contentDescription="@string/description_image_button_two"
                        android:background="@drawable/dial_num_2" />

                    <View
                         android:layout_width="20dip"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        />
                    
                    <ImageButton
                        android:id="@+id/three"
                         android:paddingRight="5dip"
                        style="@style/DialtactsDialpadButtonStyle"
                        android:contentDescription="@string/description_image_button_three"
                        android:background="@drawable/dial_num_3" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                     />
                
                <TableRow
                     android:layout_height="1px"
                     android:layout_weight="3" >

                    <ImageButton
                        android:id="@+id/four"
                        style="@style/DialtactsDialpadButtonStyle"
                        android:contentDescription="@string/description_image_button_four"
                        android:background="@drawable/dial_num_4" />

                    <View
                         android:layout_width="20dip"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                      />
                    
                    <ImageButton
                        android:id="@+id/five"
                        style="@style/DialtactsDialpadButtonStyle"
                        android:contentDescription="@string/description_image_button_five"
                        android:background="@drawable/dial_num_5" />

                    <View
                         android:layout_width="20dip"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        />
                    
                    <ImageButton
                        android:id="@+id/six"
                        style="@style/DialtactsDialpadButtonStyle"
                        android:contentDescription="@string/description_image_button_six"
                        android:background="@drawable/dial_num_6" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    />
                
                <TableRow
                    android:layout_height="1px"
                     android:layout_weight="3"
                    >

                    <ImageButton
                        android:id="@+id/seven"
                        style="@style/DialtactsDialpadButtonStyle"
                        android:contentDescription="@string/description_image_button_seven"
                        android:background="@drawable/dial_num_7" />

                    <View
                        android:layout_width="20dip"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                      />
                    
                    <ImageButton
                        android:id="@+id/eight"
                        style="@style/DialtactsDialpadButtonStyle"
                        android:contentDescription="@string/description_image_button_eight"
                        android:background="@drawable/dial_num_8" />

                    <View
                        android:layout_width="20dip"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                       />
                    
                    <ImageButton
                        android:id="@+id/nine"
                        style="@style/DialtactsDialpadButtonStyle"
                        android:contentDescription="@string/description_image_button_nine"
                        android:background="@drawable/dial_num_9" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    />
                
                <TableRow
                    android:layout_height="1px"
                    android:layout_weight="3" 
                    android:clickable="false"
        			android:focusable="false">

                    <ImageButton
                        android:id="@+id/star"
                        style="@style/DialtactsDialpadButtonStyle"
                        android:contentDescription="@string/description_image_button_star"
                        android:background="@drawable/dial_num_star" />

                    <View
                         android:layout_width="20dip"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                       />
                    
                    <ImageButton
                        android:id="@+id/zero"
                        style="@style/DialtactsDialpadButtonStyle"
                        android:contentDescription="@string/description_image_button_zero"
                        android:background="@drawable/dial_num_0" />

                    <View
                         android:layout_width="20dip"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        />
                    
                    <ImageButton
                        android:id="@+id/pound"
                        style="@style/DialtactsDialpadButtonStyle"
                        android:contentDescription="@string/description_image_button_pound"
                        android:background="@drawable/dial_num_pound" />
                </TableRow>
                
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                   />
            </TableLayout>
        </LinearLayout>
    </SlidingDrawer>

</RelativeLayout>
